<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".QuizDetailsActivity">

    <TableLayout
        android:id="@+id/profileTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/purple_500"
        android:backgroundTint="@color/purple_500"
        android:padding="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quizImageView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/quizTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/quiz_title"
                android:textColor="@color/orange_500"
                android:textSize="26sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/profile_row_padding">

            <TextView
                android:id="@+id/quizDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/quiz_description"
                android:textColor="@color/orange_500"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/profile_row_padding">

            <TextView
                android:id="@+id/quizTotalQTextView"
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/total_questions"
                android:textColor="@color/orange_500"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/totalQuestions"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/not_applicable"
                android:textColor="@color/orange_500"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/profile_row_padding">

            <TextView
                android:id="@+id/lastScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/your_last_score"
                android:textColor="@color/orange_500"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lastScore"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/not_applicable"
                android:textColor="@color/orange_500"
                android:textSize="16sp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/topLogoTextView2"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:background="@color/purple_500"
        android:contentDescription="@string/logo_for_app"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingTop="20dp"
        android:shadowColor="@color/black"
        android:text="@string/brainblast"
        android:textAlignment="center"
        android:textColor="@color/orange_500"
        android:textSize="@dimen/logo_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:background="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="92dp"
        android:layout_height="86dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/purple_500"
        android:contentDescription="@string/profile_redirect"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:srcCompat="@drawable/header_account_image_line_512" />

    <ImageButton
        android:id="@+id/leaderboardButton"
        android:layout_width="92dp"
        android:layout_height="86dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/purple_500"
        android:contentDescription="@string/leaderboard_redirect"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:srcCompat="@drawable/leaderboard" />

    <ImageView
        android:id="@+id/quizImageView"
        android:layout_width="0dp"
        android:layout_height="167dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/image_for_quiz"
        app:layout_constraintBottom_toTopOf="@+id/profileTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLogoTextView2"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="?attr/actionBarItemBackground" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/primary_btn_bg"
        android:backgroundTint="@color/orange_500"
        android:text="Start Quiz"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTable"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>