<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".QuizQuestionActivity">

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_10"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/logo_font_size"
        app:layout_constraintBottom_toTopOf="@+id/categoriesRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizNameTextView"
        app:layout_constraintVertical_bias="0.382" />

    <TextView
        android:id="@+id/topLogoTextView4"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:background="@color/purple_500"
        android:contentDescription="@string/logo_for_app"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingTop="20dp"
        android:shadowColor="@color/black"
        android:text="@string/brainblast"
        android:textAlignment="center"
        android:textColor="@color/orange_500"
        android:textSize="@dimen/logo_font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/quizNameTextView"
        android:layout_width="316dp"
        android:layout_height="46dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/purple_500"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="@color/orange_500"
        android:textSize="@dimen/category_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="313dp"
        android:layout_height="82dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/purple_500"
        android:text="Fetching Data..."
        android:textAlignment="center"
        android:textColor="@color/orange_500"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/answer"
        app:layout_constraintBottom_toTopOf="@+id/buttonD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:text="@string/answer"
        app:layout_constraintBottom_toTopOf="@+id/buttonB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/answer"
        app:layout_constraintBottom_toTopOf="@+id/buttonC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizNameTextView"
        app:layout_constraintVertical_bias="0.698" />

    <Button
        android:id="@+id/nextQButton"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerCheckTextView" />

    <TextView
        android:id="@+id/answerCheckTextView"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/verifying_answer"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonD" />

</androidx.constraintlayout.widget.ConstraintLayout>