<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/list_bg"
    android:theme="@style/Theme.BrainblastQuizApp">

    <androidx.cardview.widget.CardView
        android:id="@+id/quiz_card"
        app:cardCornerRadius="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/quizImageView"
            android:layout_width="match_parent"
            android:layout_height="213dp"
            android:contentDescription="@string/image_for_quiz"
            android:scaleType="centerCrop"
            tools:srcCompat="@drawable/placeholder_image" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/image_coverView"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/image_cover"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@id/quiz_card"
        app:layout_constraintEnd_toEndOf="@id/quiz_card"
        app:layout_constraintStart_toStartOf="@id/quiz_card" />


    <TextView
        android:id="@+id/detailsTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/quiz_title"
        android:textColor="@color/orange_500"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_card" />

    <TextView
        android:id="@+id/detailsDescTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/quiz_description"
        android:textColor="@color/orange_500"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsTitleTextView" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_list_button"
        android:text="@string/view_quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsDescTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>